feat(amplify-pd-project): add mentee page

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,7 +29,15 @@
     "amplifypdmli": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "amplifypdmlif51b8679",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ],
       "output": {
         "authConfig": {
           "defaultAuthentication": {
@@ -38,7 +46,14 @@
               "apiKeyExpirationDays": 7
             }
           },
-          "additionalAuthenticationProviders": []
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authamplifypdmlif51b8679"
+              }
+            }
+          ]
         }
       }
     }
